--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,4 @@
 @font-face {
     font-family: 'FoundersGrotesk';
-    src: url('https://ochi.design/wp-content/themes/ochi/assets/fonts/FoundersGrotesk-Semibold.woff2') format('woff'); /* Update the path to your font file */
-    /* You may need to specify additional src attributes for different font formats (e.g., woff2, ttf) */
+    src: url('https://ochi.design/wp-content/themes/ochi/assets/fonts/FoundersGrotesk-Semibold.woff2') format('woff'); 
 }
